<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>vn.tr</groupId>
        <artifactId>tr-pro-app</artifactId>
        <version>1.0.0</version>
        <relativePath/>
    </parent>

    <artifactId>tr-core-service</artifactId>
    <packaging>jar</packaging>
    <version>${revision}</version>
    <name>tr-core-service</name>
    <description>Core Service</description>

    <dependencies>

        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
        </dependency>

        <dependency>
            <groupId>vn.tr</groupId>
            <artifactId>tr-common-jpa</artifactId>
            <version>${revision}</version>
        </dependency>

        <dependency>
            <groupId>vn.tr</groupId>
            <artifactId>tr-common-core</artifactId>
            <version>${revision}</version>
        </dependency>

        <dependency>
            <groupId>vn.tr</groupId>
            <artifactId>tr-common-web</artifactId>
            <version>${revision}</version>
        </dependency>

        <dependency>
            <groupId>vn.tr</groupId>
            <artifactId>tr-common-redis</artifactId>
            <version>${revision}</version>
        </dependency>

        <dependency>
            <groupId>vn.tr</groupId>
            <artifactId>tr-common-log</artifactId>
            <version>${revision}</version>
        </dependency>

        <dependency>
            <groupId>vn.tr</groupId>
            <artifactId>tr-common-security</artifactId>
            <version>${revision}</version>
        </dependency>

        <dependency>
            <groupId>vn.tr</groupId>
            <artifactId>tr-common-ratelimiter</artifactId>
            <version>${revision}</version>
        </dependency>

        <dependency>
            <groupId>vn.tr</groupId>
            <artifactId>tr-common-mail</artifactId>
            <version>${revision}</version>
        </dependency>

        <dependency>
            <groupId>vn.tr</groupId>
            <artifactId>tr-common-sms</artifactId>
            <version>${revision}</version>
        </dependency>

        <dependency>
            <groupId>vn.tr</groupId>
            <artifactId>tr-common-satoken</artifactId>
            <version>${revision}</version>
        </dependency>

        <dependency>
            <groupId>vn.tr</groupId>
            <artifactId>tr-common-encrypt</artifactId>
            <version>${revision}</version>
        </dependency>

        <dependency>
            <groupId>vn.tr</groupId>
            <artifactId>tr-common-websocket</artifactId>
            <version>${revision}</version>
        </dependency>

        <dependency>
            <groupId>vn.tr</groupId>
            <artifactId>tr-common-feign</artifactId>
            <version>${revision}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-config</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.kafka</groupId>
            <artifactId>spring-kafka</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
        </dependency>

        <dependency>
            <groupId>de.codecentric</groupId>
            <artifactId>spring-boot-admin-starter-client</artifactId>
            <version>${spring-boot-admin.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>${springdoc.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-openfeign</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-freemarker</artifactId>
        </dependency>


        <dependency>
            <groupId>io.github.linpeilie</groupId>
            <artifactId>mapstruct-plus-spring-boot-starter</artifactId>
            <version>${mapstruct-plus.version}</version>
        </dependency>

        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-processor</artifactId>
            <version>7.0.6.Final</version>
        </dependency>

    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot.version}</version>
                <configuration>
                    <mainClass>vn.tr.core.CoreServiceApplication</mainClass>
                    <addResources>true</addResources>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>${maven-war-plugin.version}</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                    <warName>${project.artifactId}</warName>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.hibernate.orm</groupId>
                            <artifactId>hibernate-processor</artifactId>
                            <version>7.0.6.Final</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>1.6.3</version>
                        </path>

                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok-mapstruct-binding</artifactId>
                            <version>${mapstruct-plus.lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
